feat: sistema de daño RPG, rebalanceo de habilidades y actualización README
- Sistema de daño RPG con fórmula de armadura propia (físico, mágico, veneno, necrótico)
- DamageCalculator: veneno y necrótico ignoran toda la armadura
- CombatListener: intercepta eventos para anular la armadura vanilla de Minecraft
- Ability: nuevos campos damageType, magicPenetration, manaCostPercent
- AbilityBarListener: categorías de arma (BOW, SWORD, AXE, STAFF, WAND, GAUNTLET), coste de maná con parte porcentual del máximo, helper applyAbilityDamage()
- Rebalanceo completo de 8 clases (Arquero, Cazador, Druida, Evocador, Guerrero, Invocador, Mago, Monje)
- Nuevas habilidades de Monje: golpe-de-chi, flujo-de-chi, palma-de-buda, meditacion, ocho-puertas-meditacion, golpe-ocho-trigramas, descarga-de-karma, carrera-zen
- README: sección de sistema de daño RPG, coste de maná, tabla de Monje, correcciones menores

--- a/src/main/resources/habilidades/bola-fuego.yml
+++ b/src/main/resources/habilidades/bola-fuego.yml
@@ -2,14 +2,16 @@ id: bola-fuego
 name: Bola de Fuego
 description: Lanza una bola de fuego que explota al impactar. Si el objetivo muere, causa una erupcion de dano en area
 class: mago
+damage-type: magical
 required-level: 1
-mana-cost: "25"
+mana-cost: "20"
+mana-cost-percent: 10
 material: BLAZE_POWDER
 custom-model-data: 0
 particle: FLAME
 particle-count: 30
 particle-speed: 0.5
-required-weapon: ""
+required-weapon: "STAFF,WAND,SWORD"
 range: 15
 area-of-effect: 3
 cast-time: 2
