--- a/src/main/resources/habilidades/flecha-penetrante.yml
+++ b/src/main/resources/habilidades/flecha-penetrante.yml
@@ -2,24 +2,26 @@ id: flecha-penetrante
 name: Flecha Penetrante
 description: Flecha que ignora una parte de la armadura y defensa del objetivo
 class: arquero
+damage-type: physical
 required-level: 10
 mana-cost: "45"
+mana-cost-percent: 3
 material: ARROWREGEN
 custom-model-data: 0
 particle: DAMAGE_INDICATOR
 particle-count: 10
 particle-speed: 0.3
-required-weapon: BOW
+required-weapon: "BOW,CROSSBOW"
 range: 12
 area-of-effect: 0
-cast-time: 1.5
+cast-time: 0.1
 cast-mode: mobile
-cooldown: 3.0
-armor-penetration: 0.3
+cooldown: 20
+armor-penetration: 50
 damage-scaling:
   health: 0.0
-  strength: 0.3
-  agility: 0.5
+  strength: 0.0
+  agility: 0.3
   intelligence: 0.0
   sacred-power: 0.0
   corrupt-power: 0.0
