--- a/src/main/resources/habilidades/habilidades-extra/mordisco-panda.yml
+++ b/src/main/resources/habilidades/habilidades-extra/mordisco-panda.yml
@@ -2,6 +2,7 @@ id: mordisco-panda
 name: Mordisco de Panda
 description: Un mordisco que causa daño y te cura ligeramente
 class: druida
+damage-type: physical
 required-level: 10
 mana-cost: "18"
 material: MELON_SLICE
