--- a/src/main/resources/habilidades/llama-interior.yml
+++ b/src/main/resources/habilidades/llama-interior.yml
@@ -4,17 +4,18 @@ description: Aumenta tu armadura y vida temporalmente durante 1 minuto
 class: evocador
 required-level: 5
 mana-cost: "40"
+mana-cost-percent: 20
 material: MAGMA_CREAM
 custom-model-data: 0
 particle: LAVA
 particle-count: 25
 particle-speed: 0.2
-required-weapon: ""
+required-weapon: "STAFF,SWORD,GAUNTLET"
 range: 0
 area-of-effect: 0
-cast-time: 0.3
+cast-time: 0
 cast-mode: mobile
-cooldown: 90
+cooldown: 120
 buff-duration: 60
 armor-bonus: 10
 health-bonus: 20
