--- a/src/main/resources/habilidades/atronar.yml
+++ b/src/main/resources/habilidades/atronar.yml
@@ -2,14 +2,16 @@ id: atronar
 name: Atronar
 description: Golpea el suelo causando dano en area y ralentizando a los enemigos un 20%
 class: guerrero
+damage-type: physical
 required-level: 15
-mana-cost: "40"
+mana-cost: "50"
+mana-cost-percent: 30
 material: NETHERITE_AXE
 custom-model-data: 0
 particle: EXPLOSION_LARGE
 particle-count: 10
 particle-speed: 0.1
-required-weapon: ""
+required-weapon: "SWORD,AXE"
 range: 0
 area-of-effect: 3
 cast-time: 0
