--- a/src/main/resources/habilidades/cura-animal.yml
+++ b/src/main/resources/habilidades/cura-animal.yml
@@ -3,7 +3,8 @@ name: Cura Animal
 description: Cura a tu mascota restaurando su vida
 class: cazador
 required-level: 3
-mana-cost: "30"
+mana-cost: "0"
+mana-cost-percent: 10
 material: GOLDEN_CARROT
 custom-model-data: 0
 particle: HEART
@@ -12,9 +13,9 @@ particle-speed: 0.2
 required-weapon: ""
 range: 10
 area-of-effect: 0
-cast-time: 0.5
-cast-mode: mobile
-cooldown: 5.0
+cast-time: 1
+cast-mode: static
+cooldown: 20
 
 # Porcentaje de vida máxima que se cura (0-100)
 heal-percent: 30
