--- a/src/main/resources/habilidades/disparo-al-corazon.yml
+++ b/src/main/resources/habilidades/disparo-al-corazon.yml
@@ -3,18 +3,20 @@ name: Disparo al Corazon
 description: Aumenta el dano y el critico del lanzador durante 30 segundos
 class: arquero
 required-level: 30
-mana-cost: "70"
+mana-cost: "50"
+mana-cost-percent: 20
 material: HEART_OF_THE_SEA
 custom-model-data: 0
 particle: TOTEM_OF_UNDYING
 particle-count: 30
 particle-speed: 0.5
-required-weapon: BOW
+required-weapon: ""
 range: 0
 area-of-effect: 0
 cast-time: 0
 cast-mode: mobile
-cooldown: 30.0
+cooldown: 90
+damage-bonus: 0.4
 crit-bonus: 0.5
 crit-duration: 30.0
 damage-scaling:
