--- a/src/main/resources/habilidades/elemental-de-agua.yml
+++ b/src/main/resources/habilidades/elemental-de-agua.yml
@@ -2,18 +2,20 @@ id: elemental-de-agua
 name: Elemental de Agua
 description: Invoca un poderoso elemental de agua que lucha a tu lado durante 60 segundos
 class: invocador
+damage-type: magical
 required-level: 25
 mana-cost: "80"
+mana-cost-percent: 30
 material: PRISMARINE_SHARD
 custom-model-data: 0
 particle: DRIPPING_WATER
 particle-count: 25
 particle-speed: 0.3
-required-weapon: ""
+required-weapon: "STAFF,WAND,SWORD"
 range: 0
 area-of-effect: 0
 cast-time: 5
-cast-mode: stationary
+cast-mode: static
 cooldown: 100
 summon-duration: 60
 summon-type: DROWNED
