--- a/src/main/resources/habilidades/elemental-de-aire.yml
+++ b/src/main/resources/habilidades/elemental-de-aire.yml
@@ -2,18 +2,20 @@ id: elemental-de-aire
 name: Elemental de Aire
 description: Invoca un veloz elemental de aire que lucha a tu lado durante 60 segundos
 class: invocador
+damage-type: magical
 required-level: 15
-mana-cost: "70"
+mana-cost: "50"
+mana-cost-percent: 30
 material: FEATHER
 custom-model-data: 0
 particle: CLOUD
 particle-count: 25
 particle-speed: 0.4
-required-weapon: ""
+required-weapon: "STAFF,WAND,SWORD"
 range: 0
 area-of-effect: 0
 cast-time: 5
-cast-mode: stationary
+cast-mode: static
 cooldown: 90
 summon-duration: 60
 summon-type: STRAY
