--- a/src/main/resources/habilidades/erupcion-de-fuego.yml
+++ b/src/main/resources/habilidades/erupcion-de-fuego.yml
@@ -2,18 +2,20 @@ id: erupcion-de-fuego
 name: Erupcion de Fuego
 description: Crea una erupcion de fuego que quema a los enemigos en el area durante 5 segundos
 class: invocador
+damage-type: magical
 required-level: 1
 mana-cost: "30"
+mana-cost-percent: 10
 material: MAGMA_CREAM
 custom-model-data: 0
 particle: FLAME
 particle-count: 30
 particle-speed: 0.2
-required-weapon: ""
+required-weapon: "STAFF,WAND,SWORD"
 range: 0
 area-of-effect: 3
-cast-time: 2
-cast-mode: stationary
+cast-time: 1
+cast-mode: static
 cooldown: 15
 dot-duration: 5
 dot-ticks: 5
