--- a/src/main/resources/habilidades/forma-de-lobo.yml
+++ b/src/main/resources/habilidades/forma-de-lobo.yml
@@ -3,17 +3,19 @@ name: Forma de Lobo
 description: Te transforma en un lobo y otorga habilidades zarpazo, mordisco infectado y volver a forma druida
 class: druida
 required-level: 15
-mana-cost: "50"
+mana-cost: "40"
+mana-cost-percent: 30
 material: BONE
 custom-model-data: 0
 particle: SMOKE
 particle-count: 20
 particle-speed: 0.3
-required-weapon: ""
+required-weapon: "STAFF"
 range: 0
 area-of-effect: 0
-cast-time: 1.0
+cast-time: 0
 cast-mode: static
+cooldown: 20
 
 # Configuración de transformación
 transformation:
