--- a/src/main/resources/habilidades/forma-de-panda.yml
+++ b/src/main/resources/habilidades/forma-de-panda.yml
@@ -3,17 +3,19 @@ name: Forma de Panda
 description: Te transforma en un panda y otorga habilidades zarpazo, mordisco, golpe pesado y volver a forma druida
 class: druida
 required-level: 10
-mana-cost: "50"
+mana-cost: "40"
+mana-cost-percent: 30
 material: BAMBOO
 custom-model-data: 0
 particle: HAPPY_VILLAGER
 particle-count: 25
 particle-speed: 0.3
-required-weapon: ""
+required-weapon: "STAFF"
 range: 0
 area-of-effect: 0
-cast-time: 1.0
+cast-time: 0
 cast-mode: static
+cooldown: 20
 
 # Configuración de transformación
 transformation:
