--- a/src/main/resources/habilidades/habilidades-extra/zarpazo-zorro.yml
+++ b/src/main/resources/habilidades/habilidades-extra/zarpazo-zorro.yml
@@ -2,6 +2,7 @@ id: zarpazo-zorro
 name: Zarpazo Rápido
 description: Un zarpazo veloz que causa daño
 class: druida
+damage-type: physical
 required-level: 5
 mana-cost: "8"
 material: SWEET_BERRIES
