--- a/src/main/resources/habilidades/llamada-ultimo-dragon.yml
+++ b/src/main/resources/habilidades/llamada-ultimo-dragon.yml
@@ -2,25 +2,27 @@ id: llamada-ultimo-dragon
 name: La Llamada del Último Dragón
 description: Invoca un mini Ender Dragón que ataca a los enemigos durante 30 segundos
 class: evocador
+damage-type: magical
 required-level: 30
-mana-cost: "100"
+mana-cost: "80"
+mana-cost-percent: 30
 material: DRAGON_EGG
 custom-model-data: 0
 particle: PORTAL
 particle-count: 50
 particle-speed: 0.3
-required-weapon: ""
+required-weapon: "STAFF,SWORD,GAUNTLET"
 range: 0
 area-of-effect: 15
-cast-time: 2.0
+cast-time: 2
 cast-mode: static
-cooldown: 180
+cooldown: 60
 summon-duration: 30
 damage-scaling:
-  health: 0.2
+  health: 0.0
   strength: 0.0
   agility: 0.0
   intelligence: 0.8
-  sacred-power: 0.3
-  corrupt-power: 0.3
-  nature-power: 0.3
+  sacred-power: 0.0
+  corrupt-power: 0.0
+  nature-power: 0.0
