--- a/src/main/resources/habilidades/llamarada.yml
+++ b/src/main/resources/habilidades/llamarada.yml
@@ -2,14 +2,16 @@ id: llamarada
 name: Llamarada
 description: Lanza una llamarada en cono frente al mago que quema a los enemigos
 class: mago
+damage-type: magical
 required-level: 15
-mana-cost: "30"
+mana-cost: "40"
+mana-cost-percent: 20
 material: FIRE_CHARGE
 custom-model-data: 0
 particle: FLAME
 particle-count: 50
 particle-speed: 0.4
-required-weapon: ""
+required-weapon: "STAFF,WAND,SWORD"
 range: 2
 area-of-effect: 2
 cast-time: 0
