--- a/src/main/resources/habilidades/potencia-de-la-manada.yml
+++ b/src/main/resources/habilidades/potencia-de-la-manada.yml
@@ -3,18 +3,19 @@ name: Potencia de la Manada
 description: Buff grupal que escala con el numero de mascotas activas
 class: cazador
 required-level: 18
-mana-cost: "55"
+mana-cost: "50"
+mana-cost-percent: 30
 material: FERMENTED_SPIDER_EYE
 custom-model-data: 0
 particle: HAPPY_VILLAGER
 particle-count: 20
 particle-speed: 0.3
-required-weapon: ""
+required-weapon: "BOW,AXE,SWORD"
 range: 10
 area-of-effect: 0
-cast-time: 0.5
+cast-time: 0.1
 cast-mode: mobile
-cooldown: 60.0
+cooldown: 120
 
 # Porcentaje de daño adicional POR CADA mascota activa
 damage-bonus-per-pet: 10
