--- a/src/main/resources/habilidades/rugido-del-dragon.yml
+++ b/src/main/resources/habilidades/rugido-del-dragon.yml
@@ -3,16 +3,17 @@ name: Rugido del Dragón
 description: Aumenta la vida y armadura de los aliados cercanos en un 200% durante 30 segundos
 class: evocador
 required-level: 20
-mana-cost: "60"
+mana-cost: "40"
+mana-cost-percent: 20
 material: DRAGON_HEAD
 custom-model-data: 0
 particle: EXPLOSION_LARGE
 particle-count: 20
 particle-speed: 0.3
-required-weapon: ""
+required-weapon: "STAFF,SWORD,GAUNTLET"
 range: 0
 area-of-effect: 12
-cast-time: 1.0
+cast-time: 0
 cast-mode: mobile
 cooldown: 120
 buff-duration: 30
