--- a/src/main/resources/habilidades/salto-dimensional.yml
+++ b/src/main/resources/habilidades/salto-dimensional.yml
@@ -3,7 +3,8 @@ name: Salto Dimensional
 description: Te teletransporta hacia adelante hasta 10 bloques instantaneamente
 class: mago
 required-level: 30
-mana-cost: "25"
+mana-cost: "20"
+mana-cost-percent: 20
 material: ENDER_PEARL
 custom-model-data: 0
 particle: PORTAL
