--- a/src/main/resources/habilidades/trueno-primigenio.yml
+++ b/src/main/resources/habilidades/trueno-primigenio.yml
@@ -2,18 +2,20 @@ id: trueno-primigenio
 name: Trueno Primigenio
 description: Invoca un devastador trueno que golpea a todos los enemigos en el area
 class: invocador
+damage-type: magical
 required-level: 10
-mana-cost: "45"
+mana-cost: "40"
+mana-cost-percent: 20
 material: LIGHTNING_ROD
 custom-model-data: 0
 particle: ELECTRIC_SPARK
 particle-count: 40
 particle-speed: 0.5
-required-weapon: ""
+required-weapon: "STAFF,WAND,SWORD"
 range: 0
 area-of-effect: 5
 cast-time: 3
-cast-mode: stationary
+cast-mode: static
 cooldown: 15
 damage-scaling:
   health: 0.0
