--- a/src/main/resources/habilidades/ventisca.yml
+++ b/src/main/resources/habilidades/ventisca.yml
@@ -2,19 +2,21 @@ id: ventisca
 name: Ventisca
 description: Invoca una ventisca en un area que golpea 5 veces. Enemigos golpeados 3+ veces se congelan
 class: mago
+damage-type: magical
 required-level: 20
-mana-cost: "50"
+mana-cost: "30"
+mana-cost-percent: 10
 material: SNOW_BLOCK
 custom-model-data: 0
 particle: SNOWFLAKE
 particle-count: 60
 particle-speed: 0.3
-required-weapon: ""
+required-weapon: "STAFF,WAND,SWORD"
 range: 10
 area-of-effect: 4
-cast-time: 3
+cast-time: 0.1
 cast-mode: static
-cooldown: 25
+cooldown: 0
 damage-scaling:
   health: 0.0
   strength: 0.0
